// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scrollMarginBlockStart renders 0 1`] = `
Array [
  .c0 {
  -webkit-scroll-margin-block-start: 0;
  -moz-scroll-margin-block-start: 0;
  -ms-scroll-margin-block-start: 0;
  scroll-margin-block-start: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-block-start: 0;
  -moz-scroll-margin-block-start: 0;
  -ms-scroll-margin-block-start: 0;
  scroll-margin-block-start: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-block-start: 0;
  -moz-scroll-margin-block-start: 0;
  -ms-scroll-margin-block-start: 0;
  scroll-margin-block-start: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-block-start: 0;
  -moz-scroll-margin-block-start: 0;
  -ms-scroll-margin-block-start: 0;
  scroll-margin-block-start: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollMarginBlockStart renders function 1`] = `
Array [
  .c0 {
  -webkit-scroll-margin-block-start: hasnot;
  -moz-scroll-margin-block-start: hasnot;
  -ms-scroll-margin-block-start: hasnot;
  scroll-margin-block-start: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-block-start: has;
  -moz-scroll-margin-block-start: has;
  -ms-scroll-margin-block-start: has;
  scroll-margin-block-start: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-block-start: hasnot;
  -moz-scroll-margin-block-start: hasnot;
  -ms-scroll-margin-block-start: hasnot;
  scroll-margin-block-start: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-block-start: has;
  -moz-scroll-margin-block-start: has;
  -ms-scroll-margin-block-start: has;
  scroll-margin-block-start: has;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollMarginBlockStart renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-scroll-margin-block-start: invalid.path.1;
  -moz-scroll-margin-block-start: invalid.path.1;
  -ms-scroll-margin-block-start: invalid.path.1;
  scroll-margin-block-start: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-block-start: invalid.path.1;
  -moz-scroll-margin-block-start: invalid.path.1;
  -ms-scroll-margin-block-start: invalid.path.1;
  scroll-margin-block-start: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-block-start: invalid.path.1;
  -moz-scroll-margin-block-start: invalid.path.1;
  -ms-scroll-margin-block-start: invalid.path.1;
  scroll-margin-block-start: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-block-start: invalid.path.1;
  -moz-scroll-margin-block-start: invalid.path.1;
  -ms-scroll-margin-block-start: invalid.path.1;
  scroll-margin-block-start: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollMarginBlockStart renders negative number 1`] = `
Array [
  .c0 {
  -webkit-scroll-margin-block-start: -54881px;
  -moz-scroll-margin-block-start: -54881px;
  -ms-scroll-margin-block-start: -54881px;
  scroll-margin-block-start: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-block-start: -54881px;
  -moz-scroll-margin-block-start: -54881px;
  -ms-scroll-margin-block-start: -54881px;
  scroll-margin-block-start: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-block-start: -42365px;
  -moz-scroll-margin-block-start: -42365px;
  -ms-scroll-margin-block-start: -42365px;
  scroll-margin-block-start: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-block-start: -42365px;
  -moz-scroll-margin-block-start: -42365px;
  -ms-scroll-margin-block-start: -42365px;
  scroll-margin-block-start: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollMarginBlockStart renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-block-start: July;
    -moz-scroll-margin-block-start: July;
    -ms-scroll-margin-block-start: July;
    scroll-margin-block-start: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-block-start: August;
    -moz-scroll-margin-block-start: August;
    -ms-scroll-margin-block-start: August;
    scroll-margin-block-start: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-block-start: September;
    -moz-scroll-margin-block-start: September;
    -ms-scroll-margin-block-start: September;
    scroll-margin-block-start: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-margin-block-start: November;
    -moz-scroll-margin-block-start: November;
    -ms-scroll-margin-block-start: November;
    scroll-margin-block-start: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-block-start: July;
    -moz-scroll-margin-block-start: July;
    -ms-scroll-margin-block-start: July;
    scroll-margin-block-start: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-block-start: August;
    -moz-scroll-margin-block-start: August;
    -ms-scroll-margin-block-start: August;
    scroll-margin-block-start: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-block-start: September;
    -moz-scroll-margin-block-start: September;
    -ms-scroll-margin-block-start: September;
    scroll-margin-block-start: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-margin-block-start: November;
    -moz-scroll-margin-block-start: November;
    -ms-scroll-margin-block-start: November;
    scroll-margin-block-start: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-block-start: May;
    -moz-scroll-margin-block-start: May;
    -ms-scroll-margin-block-start: May;
    scroll-margin-block-start: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-block-start: June;
    -moz-scroll-margin-block-start: June;
    -ms-scroll-margin-block-start: June;
    scroll-margin-block-start: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-block-start: April;
    -moz-scroll-margin-block-start: April;
    -ms-scroll-margin-block-start: April;
    scroll-margin-block-start: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-margin-block-start: November;
    -moz-scroll-margin-block-start: November;
    -ms-scroll-margin-block-start: November;
    scroll-margin-block-start: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-block-start: May;
    -moz-scroll-margin-block-start: May;
    -ms-scroll-margin-block-start: May;
    scroll-margin-block-start: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-block-start: June;
    -moz-scroll-margin-block-start: June;
    -ms-scroll-margin-block-start: June;
    scroll-margin-block-start: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-block-start: April;
    -moz-scroll-margin-block-start: April;
    -ms-scroll-margin-block-start: April;
    scroll-margin-block-start: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-margin-block-start: November;
    -moz-scroll-margin-block-start: November;
    -ms-scroll-margin-block-start: November;
    scroll-margin-block-start: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollMarginBlockStart renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-scroll-margin-block-start: July;
    -moz-scroll-margin-block-start: July;
    -ms-scroll-margin-block-start: July;
    scroll-margin-block-start: July;
  }
}

@media April {
  .c0 {
    -webkit-scroll-margin-block-start: August;
    -moz-scroll-margin-block-start: August;
    -ms-scroll-margin-block-start: August;
    scroll-margin-block-start: August;
  }
}

@media January {
  .c0 {
    -webkit-scroll-margin-block-start: September;
    -moz-scroll-margin-block-start: September;
    -ms-scroll-margin-block-start: September;
    scroll-margin-block-start: September;
  }
}

@media April {
  .c0 {
    -webkit-scroll-margin-block-start: November;
    -moz-scroll-margin-block-start: November;
    -ms-scroll-margin-block-start: November;
    scroll-margin-block-start: November;
  }
}

@media June {
  .c0 {
    -webkit-scroll-margin-block-start: August;
    -moz-scroll-margin-block-start: August;
    -ms-scroll-margin-block-start: August;
    scroll-margin-block-start: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-scroll-margin-block-start: July;
    -moz-scroll-margin-block-start: July;
    -ms-scroll-margin-block-start: July;
    scroll-margin-block-start: July;
  }
}

@media April {
  .c0 {
    -webkit-scroll-margin-block-start: August;
    -moz-scroll-margin-block-start: August;
    -ms-scroll-margin-block-start: August;
    scroll-margin-block-start: August;
  }
}

@media January {
  .c0 {
    -webkit-scroll-margin-block-start: September;
    -moz-scroll-margin-block-start: September;
    -ms-scroll-margin-block-start: September;
    scroll-margin-block-start: September;
  }
}

@media April {
  .c0 {
    -webkit-scroll-margin-block-start: November;
    -moz-scroll-margin-block-start: November;
    -ms-scroll-margin-block-start: November;
    scroll-margin-block-start: November;
  }
}

@media June {
  .c0 {
    -webkit-scroll-margin-block-start: August;
    -moz-scroll-margin-block-start: August;
    -ms-scroll-margin-block-start: August;
    scroll-margin-block-start: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-margin-block-start: January;
    -moz-scroll-margin-block-start: January;
    -ms-scroll-margin-block-start: January;
    scroll-margin-block-start: January;
  }
}

@media April {
  .c0 {
    -webkit-scroll-margin-block-start: December;
    -moz-scroll-margin-block-start: December;
    -ms-scroll-margin-block-start: December;
    scroll-margin-block-start: December;
  }
}

@media January {
  .c0 {
    -webkit-scroll-margin-block-start: April;
    -moz-scroll-margin-block-start: April;
    -ms-scroll-margin-block-start: April;
    scroll-margin-block-start: April;
  }
}

@media April {
  .c0 {
    -webkit-scroll-margin-block-start: May;
    -moz-scroll-margin-block-start: May;
    -ms-scroll-margin-block-start: May;
    scroll-margin-block-start: May;
  }
}

@media June {
  .c0 {
    -webkit-scroll-margin-block-start: June;
    -moz-scroll-margin-block-start: June;
    -ms-scroll-margin-block-start: June;
    scroll-margin-block-start: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-margin-block-start: January;
    -moz-scroll-margin-block-start: January;
    -ms-scroll-margin-block-start: January;
    scroll-margin-block-start: January;
  }
}

@media April {
  .c0 {
    -webkit-scroll-margin-block-start: December;
    -moz-scroll-margin-block-start: December;
    -ms-scroll-margin-block-start: December;
    scroll-margin-block-start: December;
  }
}

@media January {
  .c0 {
    -webkit-scroll-margin-block-start: April;
    -moz-scroll-margin-block-start: April;
    -ms-scroll-margin-block-start: April;
    scroll-margin-block-start: April;
  }
}

@media April {
  .c0 {
    -webkit-scroll-margin-block-start: May;
    -moz-scroll-margin-block-start: May;
    -ms-scroll-margin-block-start: May;
    scroll-margin-block-start: May;
  }
}

@media June {
  .c0 {
    -webkit-scroll-margin-block-start: June;
    -moz-scroll-margin-block-start: June;
    -ms-scroll-margin-block-start: June;
    scroll-margin-block-start: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollMarginBlockStart renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-scroll-margin-block-start: 54881px;
  -moz-scroll-margin-block-start: 54881px;
  -ms-scroll-margin-block-start: 54881px;
  scroll-margin-block-start: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-block-start: 54881px;
  -moz-scroll-margin-block-start: 54881px;
  -ms-scroll-margin-block-start: 54881px;
  scroll-margin-block-start: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-block-start: 42365px;
  -moz-scroll-margin-block-start: 42365px;
  -ms-scroll-margin-block-start: 42365px;
  scroll-margin-block-start: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-block-start: 42365px;
  -moz-scroll-margin-block-start: 42365px;
  -ms-scroll-margin-block-start: 42365px;
  scroll-margin-block-start: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollMarginBlockStart renders string 1`] = `
Array [
  .c0 {
  -webkit-scroll-margin-block-start: July;
  -moz-scroll-margin-block-start: July;
  -ms-scroll-margin-block-start: July;
  scroll-margin-block-start: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-block-start: July;
  -moz-scroll-margin-block-start: July;
  -ms-scroll-margin-block-start: July;
  scroll-margin-block-start: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-block-start: June;
  -moz-scroll-margin-block-start: June;
  -ms-scroll-margin-block-start: June;
  scroll-margin-block-start: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-block-start: June;
  -moz-scroll-margin-block-start: June;
  -ms-scroll-margin-block-start: June;
  scroll-margin-block-start: June;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollMarginBlockStart renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-scroll-margin-block-start: DarkSlateBlue;
  -moz-scroll-margin-block-start: DarkSlateBlue;
  -ms-scroll-margin-block-start: DarkSlateBlue;
  scroll-margin-block-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-block-start: DarkSlateBlue;
  -moz-scroll-margin-block-start: DarkSlateBlue;
  -ms-scroll-margin-block-start: DarkSlateBlue;
  scroll-margin-block-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-block-start: DarkSlateBlue;
  -moz-scroll-margin-block-start: DarkSlateBlue;
  -ms-scroll-margin-block-start: DarkSlateBlue;
  scroll-margin-block-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-block-start: DarkSlateBlue;
  -moz-scroll-margin-block-start: DarkSlateBlue;
  -ms-scroll-margin-block-start: DarkSlateBlue;
  scroll-margin-block-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
